example of a grid for different devices

--- a/style.css
+++ b/style.css
@@ -9,3 +9,95 @@ body {
     font-size: 2rem;
     padding: 15px;
 }
+
+.grid-container {
+    height: 100vh;
+    /* grid-template-columns: repeat(4, 265px); */
+    /* grid-template-rows: repeat(3, 200px); */
+    /* grid-auto-rows: minmax(150px, auto); */
+    display: grid;
+    grid-auto-rows: minmax(200px, auto);
+    grid-template-columns: repeat(4, 265px);
+    gap: 25px;
+    justify-content: center;
+    align-content: center;
+    /* row-gap: 10px;
+    column-gap: 30px; */
+
+    /* grid-template-areas: 
+    "one two three four"
+    "five five six eight"
+    "five five seven eight"; */
+}
+
+.grid-item {
+    background-color: #69B7E4;
+}
+
+.grid-item:nth-child(5) {
+    grid-column: 1/3;
+    grid-row: 2/4;
+
+    grid-area: 2/1/span 2/span 2;
+}
+
+.grid-item:nth-child(8) {
+    grid-column: 4/5;
+    grid-row: 2/4;
+
+    grid-area: 2/4/span 2/5;
+}
+
+
+/* .grid-item:first-child {
+    grid-area: one;
+}
+
+.grid-item:nth-child(2) {
+    grid-area: two;
+}
+
+.grid-item:nth-child(3) {
+    grid-area: three;
+}
+
+.grid-item:nth-child(4) {
+    grid-area: four;
+}
+
+.grid-item:nth-child(5) {
+    grid-area: five;
+}
+
+.grid-item:nth-child(6) {
+    grid-area: six;
+}
+
+.grid-item:nth-child(7) {
+    grid-area: seven;
+}
+
+.grid-item:last-child {
+    grid-area: eight;
+} */
+
+@media screen and (max-width: 1200px) {
+    .grid-container {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .grid-container {
+        grid-template-columns: repeat(2, 1fr);
+        align-content: start;
+    }
+
+    .grid-item:nth-child(5) {
+        grid-area: 3/1/span 2/span 2;
+    }
+
+    .grid-item:nth-child(8) {
+        grid-area: 5/2/span 2/3;
+    }
+}
